fix: disable overflow when modal is open

--- a/src/components/Modal/styles.module.css
+++ b/src/components/Modal/styles.module.css
@@ -1,3 +1,7 @@
+html:has(.modal[open]) {
+  overflow: hidden;
+}
+
 .modal {
   --transition-duration: 0.2s;
 
